2003-05-11  David Hampton  <hampton@employees.org>

	* src/gnome-utils/dialog-commodity.c: Fix problem selecting quote
	source.

	* configure.in:
	* src/gnome/gnc-splash.c:
	* src/gnome/window-main.c: Give more control over what builds have
	a version number and what builds hare labelled "cvs".

2003-05-11  Derek Atkins  <derek@ihtfp.com>

	* src/import-export/hbci/gnc-hbci-utils.c: you have to declare
	  your variables before you g_assert() anything.

2003-05-10  David Hampton  <hampton@employees.org>

	* src/backend/file/gnc-commodity-xml-v2.c:
	* src/engine/gnc-commodity.c:
	* src/engine/gnc-commodity.h:
	* src/gnome/glade/account.glade:
	* src/gnome-utils/commodity.glade:
	* src/gnome-utils/dialog-account.c:
	* src/gnome-utils/dialog-commodity.c:
	* src/gnome-utils/dialog-commodity.h:
	* src/gnome-utils/dialog-utils.c:
	* src/gnome-utils/dialog-utils.h: Migrate fields and functions
	related to price quotes from the account to the commodity.

	* src/backend/file/io-gncxml-v2.c:
	* src/engine/Scrub.c:
	* src/engine/Scrub.h: Migrate price quote information when reading
	in the data file.
	
	* src/app-utils/gnc-helpers.c:
	* src/app-utils/gnc-helpers.h:	
	* src/app-utils/gw-app-utils-spec.scm:
	* src/engine/gw-engine-spec.scm:
	* src/scm/price-quotes.scm: The code to get quotes from F::Q now
	needs to get the information from the commodity data structures,
	not the Account data structures.

	* src/backend/file/gnc-account-xml-v2.c: Continue to write out
	price quote information with the Account data. This allows users
	to fall pack to production code without loss of information.  This
	code will drop out in the next release of gnucash (1.10 or 2.0).

	* src/engine/Account.c:
	* src/engine/Account.h: Deprecated a couple of functions.
	Continue existing hack of automatically marking cross currency
	accounts for automatic quote retrieval.
	
	* src/backend/file/io-gncbin-r.c: Update for the new names of
	deprecated functions.
	